--- a/education.html
+++ b/education.html
@@ -72,39 +72,39 @@
 </tr>
 <tr align="center">
 <td>PASTI Nurul Ehsan</td>
-<td><img src="pasti.JPG" width="50%"height="90%"></td>
-<td><img src="logopasti.JPG" width="30%"height="70%"></td>
+<td><img src="pasti.jpg" width="50%"height="90%"></td>
+<td><img src="logopasti.jpg" width="30%"height="70%"></td>
 
 <tr align="center">
 </td>
 </tr>
 <tr align="center">
 <td>Sekolah Kebangsaan Tunku Laksamana</td>
-<td><img src="sktl.JPG" width="50%"height="90%"></td>
-<td><img src="logosktl.JPG" width="30%"height="70%"></td>
+<td><img src="sktl.jpg" width="50%"height="90%"></td>
+<td><img src="logosktl.jpg" width="30%"height="70%"></td>
 
 <tr align="center">
 </td>
 </tr>
 <tr align="center">
 <td>Sekolah Agama Darussaadah</td>
-<td><img src="smad.JPG" width="50%"height="90%"></td>
-<td><img src="logosmad.JPG" width="30%"height="70%"></td>
+<td><img src="smad.jpg" width="50%"height="90%"></td>
+<td><img src="logosmad.jpg" width="30%"height="70%"></td>
 
 <tr align="center">
 </td>
 </tr>
 <tr align="center">
 <td>Sekolah Menengah Kebangsaan Tun Sharifah Rodziah</td>
-<td><img src="smktsr.JPG" width="40%"height="50%"></td>
-<td><img src="logosmktsr.JPG" width="30%"height="70%"></td>
+<td><img src="smktsr.jpg" width="40%"height="50%"></td>
+<td><img src="logosmktsr.jpg" width="30%"height="70%"></td>
 
 <tr align="center">
 </td>
 </tr>
 <tr align="center">
 <td>University Technology MARA</td>
-<td><img src="uitmkedah.JPG" width="50%"height="60%"></td>
+<td><img src="uitmkedah.jpg" width="50%"height="60%"></td>
 <td><img src="logouitm.jpg" width="30%"height="70%"></td>
 
 <br>
